Bradken/force-app/main/default/objects/Quote_Facility__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Facility</description>
    <label>Facility</label>
    <referenceTo>Manufacturing_Facility__c</referenceTo>
    <relationshipLabel>Quote Facilities</relationshipLabel>
    <relationshipName>Quote_Facilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>