Bradken/force-app/main/default/objects/Quote_Facility__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Quote Name/Number</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quote Facilities</relationshipLabel>
    <relationshipName>Quote_Facilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>