Bradken/force-app/main/default/objects/Quote_Facility__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Quote Line Items to be used in Supplier Selection/Freight Quote Request Cases</description>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Facilities</relationshipLabel>
    <relationshipName>Quote_Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>