Bradken/force-app/main/default/objects/Quote_Facility__c/fields/Supplier_Selection_Case__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Selection_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Selection Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Supplier Selection</relationshipLabel>
    <relationshipName>Quote_Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>