Bradken/force-app/main/default/objects/Quote_Facility__c/fields/Synced_Facility__c.field-meta.xml
<CustomField>
    <fullName>Synced_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Chosen facility for the Quote Line Item populating Lead Time and Cost</inlineHelpText>
    <label>Synced Facility</label>
    <type>Checkbox</type>
</CustomField>