Bradken/force-app/main/default/objects/Quote_Facility__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight of the Associated Quote Line Item</description>
    <formula>Quote_Line_Item__r.Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight</label>
    <type>Text</type>
</CustomField>